Adjusted height of InputSelect list to use max height

--- a/src/lib/components/wrappers/InputSelect/InputSelect.pcss
+++ b/src/lib/components/wrappers/InputSelect/InputSelect.pcss
@@ -68,7 +68,7 @@ wrapper[type=select_input] {
           z-index:101;
           border-top: 2px solid #1778d3;
           margin-top:-2px;
-          height:192px;
+          max-height:192px;
 
           > div {
             &.px__option {
